--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>3.7.02</version>
             <classifier>standalone</classifier>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
     </dependencies>
 
 </project>
